mv perl6 => raku

--- a/_posts/raku-perl6/2017-03-10-OOP-in-perl6.md
+++ b/_posts/raku-perl6/2017-03-10-OOP-in-perl6.md
@@ -1,17 +1,17 @@
 ---
 layout:        post
-title:         "OOP in Perl6"
-menutitle:     "OOP in Perl6"
+title:         "OOP in Perl6 (Raku)"
+menutitle:     "OOP in Perl6 (Raku)"
 date:          2017-03-10
-category:      Perl6
+category:      Raku
 author:        tex2e
 cover:         /assets/cover1.jpg
-redirect_from:
+redirect_from: /perl6/OOP-in-perl6
 comments:      true
 published:     true
 ---
 
-Perl6におけるオブジェクト指向のまとめ
+Perl6 (Raku) におけるオブジェクト指向のまとめ
 
 目次
 -------
