--- a/_posts/javascript/2016-04-30-dedent.md
+++ b/_posts/javascript/2016-04-30-dedent.md
@@ -2,7 +2,7 @@
 layout:        post
 title:         "JSでヒアドキュメントのインデントを取り除く方法"
 date:          2016-04-30
-category:      Javascript
+category:      JavaScript
 author:        tex2e
 cover:         /assets/cover1.jpg
 redirect_from:
