--- a/_posts/javascript/2021-09-03-PWA.md
+++ b/_posts/javascript/2021-09-03-PWA.md
@@ -2,7 +2,7 @@
 layout:        post
 title:         "WebページにPWAを導入してみる"
 date:          2021-09-03
-category:      Javascript
+category:      JavaScript
 cover:         /assets/cover1.jpg
 redirect_from:
 comments:      true
