--- a/_posts/misc/2019-08-18-seccamp2019.md
+++ b/_posts/misc/2019-08-18-seccamp2019.md
@@ -225,3 +225,4 @@ https://x-wave.orix.co.jp/fuchu/room/
 -->
 
 - Prev: [seccamp2018全国大会に参加]({{ site.baseurl }}/misc/seccamp2018)
+- Next: [seccamp2020チュータ参加記]({{ site.baseurl }}/misc/seccamp2020)
