--- a/_posts/misc/2020-12-12-seccamp2020.md
+++ b/_posts/misc/2020-12-12-seccamp2020.md
@@ -126,4 +126,7 @@ L1の暗号解読チャレンジゼミは暗号の解読方法を実装するの
 「セキュリティキャンプを修了することはフェデレーションではない」という言葉でこの参加記を締めたいと思います。
 
 
+<br>
 
+- Prev: [seccamp2019チュータ参加記]({{ site.baseurl }}/misc/seccamp2019)
+- Next: [seccamp2021チュータ参加記]({{ site.baseurl }}/misc/seccamp2021)
