--- a/_posts/protocol/2019-12-11-quic-tls.md
+++ b/_posts/protocol/2019-12-11-quic-tls.md
@@ -3,10 +3,10 @@ layout:        post
 title:         "QUIC のパケット暗号化プロセス"
 menutitle:     "QUIC のパケット暗号化プロセス (Adv.Cal. 2019)"
 date:          2019-12-11
-category:      Crypto
+category:      Protocol
 author:        tex2e
 cover:         /assets/cover4.jpg
-redirect_from:
+redirect_from: /crypto/quic-tls
 comments:      true
 published:     true
 # sitemap: false
@@ -388,6 +388,8 @@ QUICのパケット暗号化に関する文献は少ない (TLS 1.3 の仕組み
 
 具体的な実装は、Python実装である [aiortc](https://github.com/aiortc/aioquic) や、
 MozillaのRust実装である [neqo](https://github.com/mozilla/neqo) などのソースコードを追いかけるのが一番早いと思いますので、そちらも是非参考にしてください。
+
+- Next: [QUIC の Initial Packet を復号する \| 晴耕雨読](../protocol/quic-initial-packet-decrypt)
 
 🎄
 この記事は「[セキュリティキャンプ 修了生進捗 Advent Calendar 2019](https://adventar.org/calendars/4047)」の11日目です
