--- a/_posts/misc/2021-11-27-hardening2021af.md
+++ b/_posts/misc/2021-11-27-hardening2021af.md
@@ -15,7 +15,7 @@ syntaxhighlight: true
 ---
 
 2021年11月17-20日と27日にHardening Projectというセキュリティの攻撃からシステムを堅牢化する競技会にTeam8として参加しました。
-Micro Hardeningには過去3回ほど参加していましたが、Hardening本大会には初参加でした。
+Hardening本大会は初参加でした (Micro Hardeningには過去3回参加)。
 個人的な目標であった「SELinuxの導入と運用」をするまでの経緯とか苦労した点を書いていきたいと思います。
 
 SELinux以外のことは他の参加者が書いてくれると思うので、ここではSELinux関連のことしか書きませんが悪しからず。
