--- a/_posts/misc/2021-11-27-hardening2021af.md
+++ b/_posts/misc/2021-11-27-hardening2021af.md
@@ -207,3 +207,12 @@ SELinuxの技術検証は成功し、SELinuxが本当にすごい仕組みであ
 - [Hardening 2021 Active Fault開催のお知らせ \| Web Application Security Forum](https://wasforum.jp/2021/09/release-hardening-2021-active-fault/)
 - [Hack The Box: Hacking Training For The Best \| Individuals & Companies](https://www.hackthebox.com/)
 - [KDL WAY（企業理念） \| Kobe Digital Labo 神戸デジタル・ラボ](https://www.kdl.co.jp/company/kdl-way/)
+
+
+<!--
+- [\[H2020BO\]Softening Day チーム発表 - YouTube](https://www.youtube.com/watch?v=V_ZyPNR-JRo&ab_channel=OWASPJAPAN)
+- [\[H2020BO\]Kuromameセッション他＆表彰式 - YouTube](https://www.youtube.com/watch?v=f4LZNlUpzc0&t=9788s&ab_channel=OWASPJAPAN)
+
+- [\[H3DX\]SofteningDay - チーム発表 - YouTube](https://www.youtube.com/watch?v=pz34w3_SJdo&t=5473s&ab_channel=HardeningProject)
+- [\[H3DX\]SofteningDay - 堅団連・kuromame6・NICT・マーケットプレイス・表彰セッション - YouTube](https://www.youtube.com/watch?v=WbwCz4MyDMY&ab_channel=HardeningProject)
+-->
