--- a/_posts/misc/2021-11-27-hardening2021af.md
+++ b/_posts/misc/2021-11-27-hardening2021af.md
@@ -206,7 +206,7 @@ SELinuxの技術検証は成功し、SELinuxが本当にすごい仕組みであ
 #### 参考文献
 - [Hardening 2021 Active Fault開催のお知らせ \| Web Application Security Forum](https://wasforum.jp/2021/09/release-hardening-2021-active-fault/)
 - [Hack The Box: Hacking Training For The Best \| Individuals & Companies](https://www.hackthebox.com/)
-- KDL WAY（企業理念） \| Kobe Digital Labo 神戸デジタル・ラボ, hxxps://www.kdl.co.jp/company/kdl-way/
+- KDL WAY（企業理念） \| Kobe Digital Labo 神戸デジタル・ラボ, hxxps://www.kdl[.]co.jp/company/kdl-way/
 
 
 <!--
