--- a/_posts/misc/2020-12-12-seccamp2020.md
+++ b/_posts/misc/2020-12-12-seccamp2020.md
@@ -126,7 +126,9 @@ L1の暗号解読チャレンジゼミは暗号の解読方法を実装するの
 「セキュリティキャンプを修了することはフェデレーションではない」という言葉でこの参加記を締めたいと思います。
 
 #### 参考文献
+<!-- markdown-link-check-disable -->
 - [セキュリティ・キャンプ全国大会2020 オンライン　ホーム：IPA 独立行政法人 情報処理推進機構](https://www.ipa.go.jp/jinzai/camp/2020/zenkoku2020_index.html)
+<!-- markdown-link-check-enable-->
 
 <br>
 
