--- a/_posts/misc/2021-10-03-seccamp2021.md
+++ b/_posts/misc/2021-10-03-seccamp2021.md
@@ -140,7 +140,9 @@ Poodle Attack で復号の成功失敗を判定する際に TLSPlaintext の Con
 
 #### 参考文献
 - [POODLE Attackの講義資料](https://gist.github.com/kurenaif/30cd917737d7f45e165146c82861ff91#file-poodle_lesson-md)
+<!-- markdown-link-check-disable -->
 - [セキュリティ・キャンプ全国大会2021 オンライン　ホーム：IPA 独立行政法人 情報処理推進機構](https://www.ipa.go.jp/jinzai/camp/2021/zenkoku2021_index.html)
+<!-- markdown-link-check-enable-->
 
 <br>
 
