--- a/_posts/protocol/2021-08-01-2-protocol.md
+++ b/_posts/protocol/2021-08-01-2-protocol.md
@@ -11,6 +11,7 @@ photoswipe:    true
 latex:         false
 sitemap:       false
 feed:          false
+section_number: 2
 ---
 
 暗号化通信で使用される暗号化パラメータは、TLSのハンドシェイクプロトコルのやりとりによって決定します。
@@ -137,4 +138,8 @@ application_traffic_secret_N+1 =
 
 
 
+---
 
+- [1. TLS 1.3/暗号化通信](./1-intro)
+- [2. TLS 1.3/プロトコルの概要](./2-protocol) **<<<<<< 現在のページ**
+- [3. TLS 1.3/基本的なデータ構造](./3-struct)
