--- a/_posts/protocol/2021-08-01-3-struct.md
+++ b/_posts/protocol/2021-08-01-3-struct.md
@@ -11,6 +11,7 @@ photoswipe:    true
 latex:         true
 sitemap:       false
 feed:          false
+section_number: 3
 ---
 
 この章ではRFC特有のデータ構造の表現方法と送受信データの構造について説明します。
@@ -115,3 +116,10 @@ struct {
 } VariantRecord;
 ```
 
+
+
+---
+
+- [1. TLS 1.3/暗号化通信](./1-intro)
+- [2. TLS 1.3/プロトコルの概要](./2-protocol)
+- [3. TLS 1.3/基本的なデータ構造](./3-struct) **<<<<<< 現在のページ**
