--- a/_posts/protocol/tls13-book/2021-08-01-1-intro.md
+++ b/_posts/protocol/tls13-book/2021-08-01-1-intro.md
@@ -9,10 +9,15 @@ comments:      false
 published:     true
 photoswipe:    true
 latex:         false
-# sitemap:       true
-# feed:          true
+# sitemap: true
+# feed: true
 section_number: 1
+sections:
+  - [./1-intro, TLS 1.3/暗号化通信]
+  - [./2-protocol, TLS 1.3/プロトコルの概要]
+  - [./3-struct, TLS 1.3/基本的なデータ構造]
 ---
+
 
 ### はじめに
 
@@ -138,9 +143,3 @@ TLS暗号化通信の解説で使う用語の説明です。
 SSL/TLS 20年の歩みと動向～ - JPNIC
 https://www.nic.ad.jp/ja/newsletter/No59/0800.html
 -->
-
----
-
-- [1. TLS 1.3/暗号化通信](./1-intro) **<<<<<< 現在のページ**
-- [2. TLS 1.3/プロトコルの概要](./2-protocol)
-- [3. TLS 1.3/基本的なデータ構造](./3-struct)
