--- a/_posts/protocol/tls13-book/2021-08-01-2-protocol.md
+++ b/_posts/protocol/tls13-book/2021-08-01-2-protocol.md
@@ -9,10 +9,15 @@ comments:      false
 published:     true
 photoswipe:    true
 latex:         false
-sitemap:       false
-feed:          false
+# sitemap: true
+# feed: true
 section_number: 2
+sections:
+  - [./1-intro, TLS 1.3/暗号化通信]
+  - [./2-protocol, TLS 1.3/プロトコルの概要]
+  - [./3-struct, TLS 1.3/基本的なデータ構造]
 ---
+
 
 暗号化通信で使用される暗号化パラメータは、TLSのハンドシェイクプロトコルのやりとりによって決定します。
 ハンドシェイクプロトコルで通信相手はTLSのバージョンと暗号化アルゴリズムを選択し、必要に応じてお互いを認証し、共有鍵の導出に必要な値を交換します。
@@ -134,12 +139,3 @@ application_traffic_secret_N+1 =
 
 復号も暗号化と同じ手順で行います。
 暗号化ではクライアントは `client_＊_secret` 、サーバは `server_＊_secret` を使いましたが、それぞれ相手が暗号化したデータを復号するために相手の鍵も必要なので、両者は結局クライアントとサーバの両方の鍵を導出する必要があります。
-
-
-
-
----
-
-- [1. TLS 1.3/暗号化通信](./1-intro)
-- [2. TLS 1.3/プロトコルの概要](./2-protocol) **<<<<<< 現在のページ**
-- [3. TLS 1.3/基本的なデータ構造](./3-struct)
