--- a/_posts/protocol/tls13-book/2021-08-01-3-struct.md
+++ b/_posts/protocol/tls13-book/2021-08-01-3-struct.md
@@ -9,10 +9,15 @@ comments:      false
 published:     true
 photoswipe:    true
 latex:         true
-sitemap:       false
-feed:          false
+# sitemap: true
+# feed: true
 section_number: 3
+sections:
+  - [./1-intro, TLS 1.3/暗号化通信]
+  - [./2-protocol, TLS 1.3/プロトコルの概要]
+  - [./3-struct, TLS 1.3/基本的なデータ構造]
 ---
+
 
 この章ではRFC特有のデータ構造の表現方法と送受信データの構造について説明します。
 
@@ -115,11 +120,3 @@ struct {
     };
 } VariantRecord;
 ```
-
-
-
----
-
-- [1. TLS 1.3/暗号化通信](./1-intro)
-- [2. TLS 1.3/プロトコルの概要](./2-protocol)
-- [3. TLS 1.3/基本的なデータ構造](./3-struct) **<<<<<< 現在のページ**
