mv category Raku => Perl

--- a/_posts/raku-perl6/2017-03-10-OOP-in-perl6.md
+++ b/_posts/raku-perl6/2017-03-10-OOP-in-perl6.md
@@ -1,12 +1,13 @@
 ---
 layout:        post
-title:         "OOP in Perl6 (Raku)"
-menutitle:     "OOP in Perl6 (Raku)"
+title:         "OOP in Raku (Perl6)"
 date:          2017-03-10
-category:      Raku
+category:      Perl
 author:        tex2e
 cover:         /assets/cover1.jpg
-redirect_from: /perl6/OOP-in-perl6
+redirect_from:
+    - /perl6/OOP-in-perl6
+    - /raku/OOP-in-perl6
 comments:      true
 published:     true
 ---
