--- a/_posts/misc/2020-03-08-kosen-AE.md
+++ b/_posts/misc/2020-03-08-kosen-AE.md
@@ -17,41 +17,40 @@ published:     true
 ## 専攻科
 
 本科よりも高度で幅広い知識を勉強する教育過程で (長野高専では)「生産環境システム専攻」と「電気情報システム専攻」の2つの専攻があります。
-電子情報科の人が専攻科に行く場合は、自動的に電気情報システム専攻に入ることになります（後で触れる学位授与機構との兼ね合いがあるので、このようになっています）。
+電子情報科の人が専攻科に行く場合は、自動的に電気情報システム専攻に入ることになります。
 
 専攻科入学前は、情報科の人として「電気系の勉強を今更するのはちょっと不安だな〜」という気持ちでしたが、選択科目の取り方次第では1つも電気系の科目を取らなくても修了できます。その代わり、数学と物理系の科目をとる必要が出てくるかもしれません。もちろん、一般科目の選択で2科目以上のところを4科目とる方法もあります (スケジュール的に大変ですが)。授業科目の詳細は[電気情報システム専攻 - 高専Webシラバス](https://syllabus.kosen-k.go.jp/Pages/PublicSubjects?school_id=20&department_id=22&year=2019)を見てください。
-長野高専に限った話になりますが、情報科出身なら選択は、知識工学、信号処理論、マイコン応用、情報セキュリティ論、画像処理応用、ソフトウェア設計論、符号理論あたりを取ればいいと思います (授業科目は変わる場合もあります)。
+長野高専に限った話になりますが、情報科出身なら選択は、知識工学、信号処理論、マイコン応用、情報セキュリティ論、画像処理応用、ソフトウェア設計論、符号理論あたりの情報系科目を取ると良いでしょう。
 専攻科1年のときは、一般科目が多くて、選択も電気系科目に偏っている部分があるので、少し大変で心配な部分もあったりしますが、専攻科2年になれば自分の専門科目が増えて一安心といった感じになります。
 
 ### 長期インターンシップ
 
-専攻科1年の後期には、14週間にわたる学外実習（長期インターンシップ）が必修科目としてあります。正直なところ14週間もインターンを受け入れてくれる会社は少ないです。なので、学校側がこれまでの実施状況からいくつか会社の候補を挙げて、学生はその中から選ぶという形に落ち着くと思います。もちろん、自分でいきたいところを調べて、そこに行くという人もいます。その辺は学校側 (長期インターン担当教員) も柔軟に対応してくれます。長期インターンシップでは、海外インターンもあるので、英語に自信のある人は海外に行くのもありです（聞いた話では、現地の大学の授業に出席したり研究室で英語でプロジェクトの議論をしたりする大学に行った人と、海外にある会社に行って仕事についていくみたいなインターンをした人がいました）。
-インターンが終わると校内でインターン報告会が実施されるので、みんながどこに何しに行ったか聞くことができます。
+専攻科1年の後期には、14週間にわたる学外実習（長期インターンシップ）が必修科目としてあります。正直なところ14週間もインターンを受け入れてくれる会社は少ないです。なので、学校側がこれまでの実施状況からいくつか会社の候補を挙げて、学生はその中から選ぶという形に落ち着くと思います。もちろん、自分でいきたいところを調べてそこに行くという人もいます。その辺は学校側 (長期インターン担当教員) も柔軟に対応してくれます。長期インターンシップでは、海外インターンもあるので、英語に自信のある人は海外に行くのもありです（海外の大学で授業に出席したり研究室でプロジェクトに参加した人や、海外の会社で仕事をしていた人がいました）。
+インターンが終わると校内でインターン報告会が実施されるので、みんながどこへ行って何をしたか話を聞くことができます。
 
 国内、海外、どこにいくにせよ、長期インターンはとても有意義な時間になると思いますし、就活でもこのときの経験は大きく活きると思います。
 
-私は国内勢で、実習先に「Linux使う人間で Python, JavaScirpt, Bash が書けて、セキュリティに興味があります」という話をしたら、サイバーレンジやることになりました。ここでの経験がセキスペ試験の合格につながったと思います。実習内容を私に合わせてくれたり、会社で作業する時にスーツ着なくてもいい点とかがよかったです。余談ですが、私はインターン先でお世話になったメンターの口癖がうつりました（笑）
+私は国内勢で、実習先に「Linux使う人間で Python, JavaScirpt, Bash が書けて、セキュリティに興味があります」という話をしたら、サイバーレンジやることになりました。実習内容を私に合わせてくれたり、スーツ着なくてもいい点とかがよかったです。あと、インターン先でお世話になったメンターの口癖がうつりました。
 
 ### 就活
 
-長期インターンシップが終わるのが、専攻科1年の1月ごろです。そして3月になったら、専攻科の半数以上は就職活動を開始します (大学にいく人は大学院入試になります)。人によっては、インターンに行ったところに就職することが4月の時点で決まっていたりしますが、大体は5月か6月くらいまでに決まります。高専で勉強した専門分野を活かせる場所であれば求人も多いので、就職は苦労はしないと思います (2,3社やれば十分)。都会で就職するのか、はたまた地元で就職するのか、自分のやりたいことは何なのか、自分のスキルセットは何か、今まで何をやってきたから会社にどう貢献できるのか、などを自問自答しながら就活していました。専攻科2年生は特別研究の時間が増える分、授業科目数が少なくなるので、上手く空いている時間を使いながら会社に面接しにいくという感じです。
+長期インターンシップが終わるのが、専攻科1年の1月ごろです。そして3月になったら、専攻科の半数以上は就職活動を開始します (大学にいく人は大学院入試になります)。人によっては、インターンに行ったところに就職することが4月の時点で決まっていたりしますが、大体は5月か6月くらいまで就職先に決まります (もちろん決まらない人もいるので発言には配慮しましょう)。高専で勉強した専門分野を活かせる場所であれば求人も多いので、就職は苦労はしないと思います (2,3社やれば十分かと思います)。都会で就職するのか、はたまた地元で就職するのか、自分のやりたいことは何なのか、自分のスキルセットは何か、今までやってきたことは会社にどう貢献できるのか、などを自問自答しながら就活していました。専攻科2年生は特別研究の時間が増える分、授業科目数が少なくなるので、上手く空いている時間を使いながら会社に面接しにいくという感じです。
 
-私は結局、長期インターンの実習先の会社に就職することになりました。新卒一括採用を止めて通年採用に切り替えた影響かは分かりませんが、他の会社とは少し違うな、という印象を感じる部分はありました。
+私は結局、長期インターンの実習先の会社に就職することになりました。
+個人的な反省は、資格の勉強を早くしていればよかったと思っています。専攻科1年の3月くらいに企業に送る書類に資格のことを書けることを目指して、そこから逆算して資格とる必要があると思います。
 
-個人的な反省としては、資格の勉強を早くしていればよかったのかな、と思っています。少なくとも専攻科1年の3月くらいに企業に送る書類に、資格のことを書けることを目指して、そこから逆算して資格とる必要があると思います。
-
-就活は時間的にも体力的にも消耗するので、褒められた面接ではないと思いますが、面接のときに技術の話が楽しくできればいいよね、くらいの感覚でやっていました。どんな言語を書けますかとか、どんなシステムを作ったことがありますが、と聞かれた時とかは、内心しめしめと思っていました（この手の話だけは結構喋れるので）。
+就活は時間的にも体力的にも消耗するので、面接のときに技術の話が楽しくできればいいよね、くらいの感覚でやっていました。どんな言語を書けますかとか、どんなシステムを作ったことがありますが、と聞かれた時とかは内心しめしめと思っていました（この手の話だけは結構喋れるので）。
 
 ### 特別研究
 
 本科では卒業研究をやりますが、専攻科では特別研究をします。名前が変わっただけですが、研究する時間は平日の授業以外の空いている時間に好きなように組むことができます（もちろん指導教員と要相談ですが）。専攻科1年のときは長期インターンがあって、集中して取り組むことができないときもありますが、専攻科2年になればその心配はなくなります。さらに、本科のときと同じ研究テーマにしていれば、研究期間が長い分、学外での研究発表に積極的に参加することができるようになります。
 
-専攻科は大学院修士課程と同等の教育課程と言っていますが、資格的には学士（工学）の学位なので、特別研究の成果によって学位授与機構の審査で拒否されることについては、あまり心配する必要はないと思います。学位授与機構には「研究の計画書」を2年生の中間くらいに、「成果の要旨」を2年の最後に提出するのですが、結果よりかは背景（特に先行研究や、それらと自分の研究との関係）について色々指摘されました。
+専攻科は大学院修士課程と同等の教育課程と言っていますが、資格的には学士（工学）の学位なので、特別研究の成果によって学位授与機構の審査で拒否されることについては、あまり心配する必要はないと思います。学位授与機構には「研究の計画書」を2年生の中間くらいに、「成果の要旨」を2年の最後に提出するのですが、結果よりも背景（特に先行研究や、それらと自分の研究との関係）について色々指摘されました。
 
 校内では特別研究中間発表(1年生)と、ポスター発表(2年生)、特別研究発表会(2年生)があるので、自分の研究についてプレゼンする機会は結構あると思います。
-私は、学外で行われている研究会でライトニングトークしたり、ポスター発表したりしましたが、時間的・体力的に余裕があればもっと積極的にいろんなところに行けたかもしれないと思うと、後悔もあります。自分の研究が実際に運用された訳でもないのに本当に社会の役に立つのか、みたいな気持ちもあります。でも私は一生に一度しか経験できない特別研究で、自然言語処理が面白そうという理由で、今の研究テーマを選んだことに後悔はありません。「成果を残した」よりは「勉強して詳しくなれた」という達成感の気持ちでいっぱいです。
+私は、学外で行われている研究会でライトニングトークしたり、ポスター発表したりしました。時間的・体力的に余裕があればもっと積極的にいろんなところに行けたかもしれません。自分の研究が実際に運用された訳でもないのに本当に社会の役に立つのか、みたいな気持ちもあります。でも「成果を残した」よりは「勉強して詳しくなれた」という達成感はあります。
 
-野心的なテーマを提案した私に対して、失敗したときのことも考えて手ごろなテーマを用意したり、自分一人では思いつかなかった部分をお話しする中で提案してくださるなど、(ある部分は放任主義的でしたが) 安心して研究できる環境を用意してくれた指導教員には、とても感謝しています。
+野心的なテーマを提案した私に対して、失敗したときのことも考えて手ごろなテーマを用意したり、自分一人では思いつかなかった部分をお話しする中で提案してくださるなど、(放任主義的な面もありましたが) 安心して研究できる環境を用意してくれた指導教員には、とても感謝しています。
 
 特別研究論文を書き終え、2月の前半に学位授与機構に必要な全ての書類[^niad]を Web 上で提出し、問題がなければ、3月の前半の時点で学位記が学位授与機構から学校に送られてきます。学位記を受け取ったら無事修了です！
 
@@ -73,7 +72,7 @@ published:     true
 - **イベント参加** : 高専生が参加できるイベントには、専攻科生も参加できる場合が多いです（高専が絡んでいるセキュリティ関係のイベントしか参加したことがありませんが）。
 - 成績順はない : 専攻科ではクラス内での成績順は存在しません。「優」を取れば十分です（就職時にGPAの計算に使う程度）。
 - 集会には出席しない : 始業式や終業式、学生会主催の総会などに顔を出す必要はありません。
-- まだ働きたくない : これが一番でしょ
+- まだ働きたくない : これが一番じゃないの？
 
 ##### 専攻科のデメリット
 
@@ -81,12 +80,11 @@ published:     true
 - **放任主義** : 困ったときに誰に相談すれば良いのかよくわからない (大体は研究指導教員に相談すれば良いが、それなりの信頼関係がないと難しい)。専攻科長も話を聞いてくれますが、積極的に干渉することはないです。推薦してほしいから学校経由で書類を出すときは手伝ってくれますが、学生を放っておいても勝手に内定が決まるだろう感はあります。
 - **マイノリティ** : 高専を知っている人でも、専攻科を知る人は少ないです。説明するのがとても面倒なので「あっ、つまり高専7年生です」みたいな説明になってしまいます。また、高専すら知らない企業からは、本科も専攻科も同じに見えるため、少なからず就職などに影響があります（実体験としてWebの入力フォームで専攻科が選択できないため、学歴が正しく伝わらないなど）。求人票に「専攻科 X万円」みたいに書かれてあれば大丈夫。でも、学歴よりも技術力の方が大切だと考えるところに行きたいね。
 - 研究の変更 : 5年の卒業研究で指導教員の専門分野外で自由にテーマを決めていた人は、研究テーマを特別研究の個表に合わせる必要があります。自分の研究を変更したい場合も、個表に合わせて計画書を作らないといけません。計画書提出後に研究の変更がある場合は、変更した理由について別途書類を作成し学位授与機構に提出しないといけません。
-- 研究スペース : 専攻科生が使える部屋として専攻科練に共用室があるけど、あそこは物置き場と化しているため、5年生と同じ研究室で研究場所を確保しないといけません (一部例外的な研究室もありましたが)。また、研究室に入ってくる5年生は、当たり外れがあるので（第一希望で弊研究室に来たのか、そうではないのか）まぁ、どうあれ仲良く研究する努力をする必要はあります。
+- 研究スペース : 研究室に来る5年生と仲良く部屋を使いましょう
 - 他学科の内容理解 : 学位授与の条件として、各工学分野の概要を理解して課題で取り組まれている内容をまとめることができる、というのがあるので、興味がなくても自分の学科以外の内容も多少は聞かないといけないです。
 - 学位授与機構への申請 : 先生方や学生課の担当の人も提出前にチェックしてくれますが、学位授与機構への申請に失敗すると、学位が授与されないので修了できません。
 - 寮から出される : 専攻科生は寮から通えないので、自分で住むとこを借りる必要があります。通生はそのまま自宅から通えます。
 - **とがった人が減る** : 周りにいた「とがった人」や「意識高い人」の多くは、編入試験を受けて大学に行ってしまいます。継続して勉強するためのモチベーションを維持し続けるためには、やはり積極的に外の世界に出る必要があると思います。でなければ「無駄に歳食ってる高専卒」と言われます。
-- やる気のなさ : とりあえず学士をとりたいだけ、みたいなやる気のない人がいる。その人のバックグランドを全て知っている訳ではないから一概には言えないけど...
 
 
 専攻科は2年間しかなくあっという間ですが、それは大学編入しても同じだと思います。
