update post, kosen-AE

--- a/_posts/misc/2020-03-08-kosen-AE.md
+++ b/_posts/misc/2020-03-08-kosen-AE.md
@@ -12,7 +12,7 @@ published:     true
 ---
 
 高専は5年間ですが、専攻科にいくとさらに2年間学校にいるので、合計で7年間になります。
-電子情報科から電気情報システム専攻科に入った者として、専攻科はどんなところなのかや、専攻科にいくメリット・デメリットなどについて書いていきます。
+電子情報科から電気情報システム専攻科に入って卒業した者として、専攻科はどんなところなのかや、専攻科にいくメリット・デメリットなどについて書いていきます。
 
 ## 専攻科
 
@@ -25,21 +25,20 @@ published:     true
 
 ### 長期インターンシップ
 
-専攻科1年の後期には、14週間にわたる学外実習（長期インターンシップ）が必修科目としてあります。正直なところ14週間もインターンを受け入れてくれる会社は少ないです。なので、学校側がこれまでの実施状況からいくつか会社の候補を挙げて、学生はその中から選ぶという形に落ち着くと思います。もちろん、自分でいきたいところを調べてそこに行くという人もいます。その辺は学校側 (長期インターン担当教員) も柔軟に対応してくれます。長期インターンシップでは、海外インターンもあるので、英語に自信のある人は海外に行くのもありです（海外の大学で授業に出席したり研究室でプロジェクトに参加した人や、海外の会社で仕事をしていた人がいました）。
+専攻科1年の後期には、14週間にわたる学外実習（長期インターンシップ）が必修科目としてあります。正直なところ14週間もインターンを受け入れてくれる会社は少ないです。なので、学校側がこれまでの実施状況からいくつか会社の候補を挙げて、学生はその中から選ぶという形に落ち着くと思います。もちろん、自分でいきたいところを調べてそこに行くという人もいます。その辺は学校側 (長期インターン担当教員) も柔軟に対応してくれます。長期インターンシップでは、海外インターンもあるので、英語に自信のある人は海外に行くのもありです (海外の大学で授業に出席したり研究室でプロジェクトに参加した人や、海外の会社で仕事をしていた人がいました)。
 インターンが終わると校内でインターン報告会が実施されるので、みんながどこへ行って何をしたか話を聞くことができます。
-
 国内、海外、どこにいくにせよ、長期インターンはとても有意義な時間になると思いますし、就活でもこのときの経験は大きく活きると思います。
 
 私は国内勢で、実習先に「Linux使う人間で Python, JavaScirpt, Bash が書けて、セキュリティに興味があります」という話をしたら、サイバーレンジやることになりました。実習内容を私に合わせてくれたり、スーツ着なくてもいい点とかがよかったです。あと、インターン先でお世話になったメンターの口癖がうつりました。
 
 ### 就活
 
-長期インターンシップが終わるのが、専攻科1年の1月ごろです。そして3月になったら、専攻科の半数以上は就職活動を開始します (大学にいく人は大学院入試になります)。人によっては、インターンに行ったところに就職することが4月の時点で決まっていたりしますが、大体は5月か6月くらいまで就職先に決まります (もちろん決まらない人もいるので発言には配慮しましょう)。高専で勉強した専門分野を活かせる場所であれば求人も多いので、就職は苦労はしないと思います (2,3社やれば十分かと思います)。都会で就職するのか、はたまた地元で就職するのか、自分のやりたいことは何なのか、自分のスキルセットは何か、今までやってきたことは会社にどう貢献できるのか、などを自問自答しながら就活していました。専攻科2年生は特別研究の時間が増える分、授業科目数が少なくなるので、上手く空いている時間を使いながら会社に面接しにいくという感じです。
+長期インターンシップが終わるのが、専攻科1年の1月ごろです。そして3月になったら、専攻科の半数以上は就職活動を開始します (大学にいく人は大学院入試になります)。人によっては、インターンに行ったところに就職することがすでに決まっていたりしますが、5月か6月くらいまでに就職先は大体決まります (決まっていない人もいるので配慮は必要ですが)。高専で勉強した専門分野を活かせる場所であれば求人も多いので、就職は苦労はしないと思います (2,3社やれば十分かと思います)。都会で就職するのか、はたまた地元で就職するのか、自分のやりたいことは何なのか、自分のスキルセットは何か、今までやってきたことは会社にどう貢献できるのか、などを自問自答しながら就活していました。専攻科2年生は特別研究の時間が増える分、授業科目数が少なくなるので、上手く空いている時間を使いながら会社に面接しにいくという感じです。
 
 私は結局、長期インターンの実習先の会社に就職することになりました。
-個人的な反省は、資格の勉強を早くしていればよかったと思っています。専攻科1年の3月くらいに企業に送る書類に資格のことを書けることを目指して、そこから逆算して資格とる必要があると思います。
-
-就活は時間的にも体力的にも消耗するので、面接のときに技術の話が楽しくできればいいよね、くらいの感覚でやっていました。どんな言語を書けますかとか、どんなシステムを作ったことがありますが、と聞かれた時とかは内心しめしめと思っていました（この手の話だけは結構喋れるので）。
+個人的な反省点は、資格の勉強を早くしていればよかったと思っています。専攻科1年の3月くらいに企業に送る書類に資格のことを書けることを目指して、そこから逆算して資格とる必要があるからです。
+就活は時間的にも体力的にも消耗するので、面接のときに技術の話が楽しくできればいいよね、くらいの感覚でやっていました。どんな言語を書けますかとか、どんなシステムを作ったことがありますが、と聞かれた時とかは内心しめしめと思っていました (この手の話だけは結構喋れるので)。
+15〜30分の短い時間で技術が好きな人間ということが伝わればいいな、という感じで話す内容は技術系に絞ってました。
 
 ### 特別研究
 
@@ -49,7 +48,6 @@ published:     true
 
 校内では特別研究中間発表(1年生)と、ポスター発表(2年生)、特別研究発表会(2年生)があるので、自分の研究についてプレゼンする機会は結構あると思います。
 私は、学外で行われている研究会でライトニングトークしたり、ポスター発表したりしました。時間的・体力的に余裕があればもっと積極的にいろんなところに行けたかもしれません。自分の研究が実際に運用された訳でもないのに本当に社会の役に立つのか、みたいな気持ちもあります。でも「成果を残した」よりは「勉強して詳しくなれた」という達成感はあります。
-
 野心的なテーマを提案した私に対して、失敗したときのことも考えて手ごろなテーマを用意したり、自分一人では思いつかなかった部分をお話しする中で提案してくださるなど、(放任主義的な面もありましたが) 安心して研究できる環境を用意してくれた指導教員には、とても感謝しています。
 
 特別研究論文を書き終え、2月の前半に学位授与機構に必要な全ての書類[^niad]を Web 上で提出し、問題がなければ、3月の前半の時点で学位記が学位授与機構から学校に送られてきます。学位記を受け取ったら無事修了です！
@@ -62,30 +60,28 @@ published:     true
 
 ##### 専攻科のメリット
 
-- 入りやすい : 推薦で入る場合は面接だけです (推薦で行くには成績がクラス上位50%)。研究テーマや、自分のキャリアプラン、自分の勉強したいことなどについてお話しするだけです。
+- 入りやすい : 推薦で入る場合は面接だけです (推薦で行くには成績がクラス上位50%)。研究テーマや、自分のキャリアプラン、自分の勉強したいことなどについて、先生とお話しするだけです。
 - 学士（工学） : 修了すると学士の学位が授与されます。
 - 学費が安い : 本科と同じく授業料は年間約23万5000円です。
 - **環境が変わらない** : 知っている同級生・先生なので、人間関係で苦労することは少ないです。
 - **研究の継続** : 同じテーマで研究が続けられます（ただし特別研究の個表のテーマ名に限定されます）。
-- **長期インターン** : 行く前は不安だけど、実際に行ってみると勉強になることが多いですし、就活とかにも役立ちます。
+- **長期インターン** : 行く前は不安ですが、実際に行くと勉強になるし、就活とかにも役立ちます。
 - 時間の組み方 : 選択科目の取り方や研究時間の組み方次第では、1コマ目の授業をなくしたり、特定の日の授業をなくすことができます。
 - **イベント参加** : 高専生が参加できるイベントには、専攻科生も参加できる場合が多いです（高専が絡んでいるセキュリティ関係のイベントしか参加したことがありませんが）。
-- 成績順はない : 専攻科ではクラス内での成績順は存在しません。「優」を取れば十分です（就職時にGPAの計算に使う程度）。
-- 集会には出席しない : 始業式や終業式、学生会主催の総会などに顔を出す必要はありません。
+- 成績順はない : 本科のようなクラス内での成績順は専攻科には存在しません。成績は就職時にGPAの計算に使う程度なので「優」を取れば十分です。
+- 集会には出席しない : 始業式や終業式、学生会主催の総会などに出席する必要はありません。
 - まだ働きたくない : これが一番じゃないの？
 
 ##### 専攻科のデメリット
 
-- **環境が変わらない** : 専攻科では何もしないと新たな人脈や環境に出会うことはないので、積極的に外の世界に出る必要がある！
-- **放任主義** : 困ったときに誰に相談すれば良いのかよくわからない (大体は研究指導教員に相談すれば良いが、それなりの信頼関係がないと難しい)。専攻科長も話を聞いてくれますが、積極的に干渉することはないです。推薦してほしいから学校経由で書類を出すときは手伝ってくれますが、学生を放っておいても勝手に内定が決まるだろう感はあります。
-- **マイノリティ** : 高専を知っている人でも、専攻科を知る人は少ないです。説明するのがとても面倒なので「あっ、つまり高専7年生です」みたいな説明になってしまいます。また、高専すら知らない企業からは、本科も専攻科も同じに見えるため、少なからず就職などに影響があります（実体験としてWebの入力フォームで専攻科が選択できないため、学歴が正しく伝わらないなど）。求人票に「専攻科 X万円」みたいに書かれてあれば大丈夫。でも、学歴よりも技術力の方が大切だと考えるところに行きたいね。
-- 研究の変更 : 5年の卒業研究で指導教員の専門分野外で自由にテーマを決めていた人は、研究テーマを特別研究の個表に合わせる必要があります。自分の研究を変更したい場合も、個表に合わせて計画書を作らないといけません。計画書提出後に研究の変更がある場合は、変更した理由について別途書類を作成し学位授与機構に提出しないといけません。
-- 研究スペース : 研究室に来る5年生と仲良く部屋を使いましょう
-- 他学科の内容理解 : 学位授与の条件として、各工学分野の概要を理解して課題で取り組まれている内容をまとめることができる、というのがあるので、興味がなくても自分の学科以外の内容も多少は聞かないといけないです。
-- 学位授与機構への申請 : 先生方や学生課の担当の人も提出前にチェックしてくれますが、学位授与機構への申請に失敗すると、学位が授与されないので修了できません。
-- 寮から出される : 専攻科生は寮から通えないので、自分で住むとこを借りる必要があります。通生はそのまま自宅から通えます。
-- **とがった人が減る** : 周りにいた「とがった人」や「意識高い人」の多くは、編入試験を受けて大学に行ってしまいます。継続して勉強するためのモチベーションを維持し続けるためには、やはり積極的に外の世界に出る必要があると思います。でなければ「無駄に歳食ってる高専卒」と言われます。
-
+- **環境が変わらない** : 専攻科では何もしないと新たな人脈や環境に出会うことはないので、積極的に外の世界に出る必要があります。
+- 放任主義 : 指導教員や専攻科長が積極的に干渉することはないです。推薦時の書類は手伝ってくれますが、学生を放っておいても勝手に内定が決まるだろう感はあります。
+- **マイノリティ** : 高専を知っている人でも専攻科を知る人は少ないです。説明するのがとても面倒なので「あっ、つまり高専7年生です」みたいな説明になってしまいます。また、高専すら知らない企業からは、本科も専攻科も同じに見えるため、少なからず就職に影響します (実体験としてWebの入力フォームで専攻科が選択できず学歴が正しく伝わらないなど)。求人票に「専攻科 XX万円」みたいに書かれてあれば大丈夫。でも、学歴よりも技術力の方が大切だと考えるところに行きたいね。
+- 研究の変更 : 5年の卒業研究で指導教員の専門分野外で自由にテーマを決めていた人は、研究テーマを指導教員の特別研究の個表に合わせて計画書を作らないといけません。計画書提出後に研究の変更がある場合は、変更した理由について別途書類を作成し学位授与機構に提出しないといけません。
+- 研究スペース : 研究室に来る5年生と仲良く部屋を使いましょう。
+- 他学科の内容理解 : 学位授与の条件として「各工学分野の概要を理解して課題で取り組まれている内容をまとめることができる」があるので、興味がなくても自分の学科以外の内容も多少は聞く必要があります。
+- 寮から出される : 専攻科生は寮から通えません。通生はそのまま自宅から通えます。
+- **とがった人が減る** : 周りにいた「とがった人」や「意識高い人」の多くは、編入試験を受けて大学に行ってしまいます。継続的な勉強のためのモチベーションを維持するには、積極的に外の世界に出る必要があると思います。でなければ「無駄に歳食ってる高専卒」と言われます。
 
 専攻科は2年間しかなくあっという間ですが、それは大学編入しても同じだと思います。
 大学編入と専攻科のそれぞれにメリット・デメリットがあると思います。
