--- a/_posts/misc/2018-08-19-seccamp2018.md
+++ b/_posts/misc/2018-08-19-seccamp2018.md
@@ -9,6 +9,11 @@ cover:         /assets/cover1.jpg
 redirect_from:
 comments:      true
 published:     true
+similarPosts:
+- [../misc/seccamp2018, seccamp2018全国大会に参加, ««« 今回]
+- [../misc/seccamp2019, seccamp2019チュータ参加記, ««« 次回]
+- [../misc/seccamp2020, seccamp2020チュータ参加記]
+- [../misc/seccamp2021, seccamp2021チュータ参加記]
 ---
 
 セキュリティキャンプ2018全国大会の集中開発コースで TLS 1.3 を実装したのでその話と、私の記憶がある限りの全ての出来事をここに書いていこうと思います。
@@ -372,5 +377,3 @@ TLS1.3/暗号ゼミも全体発表をしました。
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 とても刺激的な5日間でした。全ての関係者に感謝しています！ありがとうございました！
-
-- Next: [seccamp2019チュータ参加記]({{ site.baseurl }}/misc/seccamp2019)
