--- a/_posts/misc/2020-12-12-seccamp2020.md
+++ b/_posts/misc/2020-12-12-seccamp2020.md
@@ -11,6 +11,11 @@ latex:         false
 photoswipe:    false
 # sitemap: false
 # feed:    false
+similarPosts:
+- [../misc/seccamp2018, seccamp2018全国大会に参加]
+- [../misc/seccamp2019, seccamp2019チュータ参加記, ««« 前回]
+- [../misc/seccamp2020, seccamp2020チュータ参加記, ««« 今回]
+- [../misc/seccamp2021, seccamp2021チュータ参加記, ««« 次回]
 ---
 
 セキュリティ・キャンプ全国大会2020オンラインにチュータとして参加し、仕事と両立しながらの参加だったので、その参加記を書いていこうと思います。
@@ -128,8 +133,3 @@ L1の暗号解読チャレンジゼミは暗号の解読方法を実装するの
 <!-- markdown-link-check-disable -->
 - [セキュリティ・キャンプ全国大会2020 オンライン　ホーム：IPA 独立行政法人 情報処理推進機構](https://www.ipa.go.jp/jinzai/camp/2020/zenkoku2020_index.html)
 <!-- markdown-link-check-enable-->
-
-<br>
-
-- Prev: [seccamp2019チュータ参加記]({{ site.baseurl }}/misc/seccamp2019)
-- Next: [seccamp2021チュータ参加記]({{ site.baseurl }}/misc/seccamp2021)
