--- a/_posts/misc/2021-10-03-seccamp2021.md
+++ b/_posts/misc/2021-10-03-seccamp2021.md
@@ -11,6 +11,11 @@ latex:         false
 photoswipe:    false
 # sitemap: false
 # feed:    false
+similarPosts:
+- [../misc/seccamp2018, seccamp2018全国大会に参加]
+- [../misc/seccamp2019, seccamp2019チュータ参加記]
+- [../misc/seccamp2020, seccamp2020チュータ参加記, ««« 前回]
+- [../misc/seccamp2021, seccamp2021チュータ参加記, ««« 今回]
 ---
 
 セキュリティ・キャンプ全国大会2021 オンラインにチュータとして参加しましたので、今回で3回目となりますが、参加記を書いていこうと思います。
@@ -142,9 +147,5 @@ Poodle Attack で復号の成功失敗を判定する際に TLSPlaintext の Con
 <!-- markdown-link-check-disable -->
 - [セキュリティ・キャンプ全国大会2021 オンライン　ホーム：IPA 独立行政法人 情報処理推進機構](https://www.ipa.go.jp/jinzai/camp/2021/zenkoku2021_index.html)
 <!-- markdown-link-check-enable-->
-
-<br>
-
-- Prev: [seccamp2020チュータ参加記]({{ site.baseurl }}/misc/seccamp2020)
 
 ---
