--- a/_posts/crypto/2020-12-09-DLP.md
+++ b/_posts/crypto/2020-12-09-DLP.md
@@ -468,3 +468,4 @@ print(pow(g, x, p) == y)
 
 - J.A.ブーフマン 著、林 芳樹 訳『暗号理論入門 原書第3版』丸善出版 2012
 - Douglas R. Stinson 著、櫻井幸一 監訳『暗号理論の基礎』共立出版 1994
+- [代数曲線暗号とその安全性 - 第 15 回 整数論サマースクール 報告集, pp.223-238](http://www2.meijo-u.ac.jp/~yonishi/research/pub/ss2007/11matsuo.pdf)
