--- a/_posts/crypto/2020-12-10-ECDLP.md
+++ b/_posts/crypto/2020-12-10-ECDLP.md
@@ -313,5 +313,5 @@ print(y == x*g)
 
 
 ### 参考文献
-
 - [ECDLPに対する攻撃手法のまとめ - 一般的攻撃手法 - ₍₍ (ง ˘ω˘ )ว ⁾⁾ < 暗号楽しいです](http://elliptic-shiho.hatenablog.com/entry/2016/12/02/051931)
+- [楕円曲線上の離散対数問題に関する指数計算法 - CRYPTREC-EX-2602-2016](https://www.cryptrec.go.jp/exreport/cryptrec-ex-2602-2016.pdf)
