--- a/_posts/misc/2018-08-19-seccamp2018.md
+++ b/_posts/misc/2018-08-19-seccamp2018.md
@@ -377,3 +377,10 @@ TLS1.3/暗号ゼミも全体発表をしました。
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 とても刺激的な5日間でした。全ての関係者に感謝しています！ありがとうございました！
+
+
+#### 参考文献
+- [seccamp2018-tls13/seccamp2018-tls13: XII : TLS1.3/暗号ゼミ \[全国大会2018-集中開発コース\]](https://github.com/seccamp2018-tls13/seccamp2018-tls13)
+- [tlsfuzzer/tlslite-ng: TLS implementation in pure python, focused on interoperability testing](https://github.com/tlsfuzzer/tlslite-ng)
+- [Overview of TLS v1.3 -- OWASP](https://owasp.org/www-pdf-archive/OWASPLondon20180125_TLSv1.3_Andy_Brodie.pdf)
+- [tlslite-ng/tlsconnection.py at 028a2bd7634b0c8aee3d72773747e98fb09539b1 · tlsfuzzer/tlslite-ng](https://github.com/tlsfuzzer/tlslite-ng/blob/028a2bd7634b0c8aee3d72773747e98fb09539b1/tlslite/tlsconnection.py#L1043)
