--- a/_posts/misc/2021-10-03-seccamp2021.md
+++ b/_posts/misc/2021-10-03-seccamp2021.md
@@ -148,4 +148,10 @@ Poodle Attack で復号の成功失敗を判定する際に TLSPlaintext の Con
 - [セキュリティ・キャンプ全国大会2021 オンライン　ホーム：IPA 独立行政法人 情報処理推進機構](https://www.ipa.go.jp/jinzai/camp/2021/zenkoku2021_index.html)
 <!-- markdown-link-check-enable-->
 
+- その他：
+    - [SSLv3 and POODLE](https://www.slideshare.net/exploresecurity/ss-lv3-and-poodle)
+    - [SSL v3.0の脆弱性「POODLE」ってかわいい名前だけど何？？ \| BLOG - DeNA Engineering](https://engineering.dena.com/blog/2014/10/poodle/)
+    - [alvarogzp/poodle-challenge: Cryptographic challenge](https://github.com/alvarogzp/poodle-challenge)
+    - [thomaspatzke/POODLEAttack: PoC implementation of the POODLE attack](https://github.com/thomaspatzke/POODLEAttack)
+
 ---
