update post, ps1/array

--- a/_posts/powershell/2022-04-05-array.md
+++ b/_posts/powershell/2022-04-05-array.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "PowerShellの配列と連想配列の使い方"
+title:         "PowerShellの配列と連想配列"
 date:          2022-04-05
 category:      PowerShell
 cover:         /assets/cover14.jpg
@@ -185,6 +185,45 @@ PS> $myXml = [xml] @'
 '@
 PS> $myXml.Person.Phone."#text"
 000-123-4567
+```
+
+#### 連想配列の要素一覧
+連想配列から key と value のペアを取得したいときは、まず key (キー) を取得して、それを利用して value (要素) を取得します。
+連想配列のキーの一覧は Keys プロパティで取得できます。
+```ps1
+PS> $myHash = @{}
+PS> $myHash["foo"] = 123
+PS> $myHash["bar"] = 456
+PS> $myHash["baz"] = 789
+PS> foreach ($key in $myHash.Keys) { "$key => $($myHash[$key])" }
+baz => 789
+bar => 456
+foo => 123
+```
+
+連想配列の value (要素) だけ取得したい場合は、Keys の代わりに Values プロパティを使用します。
+```ps1
+PS> $myHash = @{}
+PS> $myHash["foo"] = 123
+PS> $myHash["bar"] = 456
+PS> $myHash["baz"] = 789
+PS> foreach ($value in $myHash.Values) { $value }
+789
+456
+123
+```
+
+#### 順序付き連想配列
+連想配列で Keys や Values で取得する順番を、連想配列に格納した順番にしてほしい時は、定義時に `[ordered]` をつけて順序付きにします。
+```ps1
+PS> $myHash = [ordered]@{}
+PS> $myHash["foo"] = 123
+PS> $myHash["bar"] = 456
+PS> $myHash["baz"] = 789
+PS> foreach ($key in $myHash.Keys) { "$key => $($myHash[$key])" }
+foo => 123
+bar => 456
+baz => 789
 ```
 
 以上です。
