--- a/_posts/protocol/2021-01-11-oids.md
+++ b/_posts/protocol/2021-01-11-oids.md
@@ -14,15 +14,18 @@ photoswipe:    false
 ---
 
 オブジェクトID (OID) のドット表記とDER形式のバイト列の変換規則について説明します。
-OIDはオブジェクト識別子のことですが、X.509証明書をDER形式で読み書きするときは、ドット表記ではなくバイト列による表記を使います。
-OIDはドット区切りで、例えば「1.2.3.4.16」をバイト列に変換すると「01 02 03 04 10」のように16進数表記になります。とても簡単です。
-ただし、表記にあたって次の2つの特殊ルールが優先して適用されます。
+OIDはオブジェクト識別子のことで例えば「1.2.3.4.16」のように書きます。
+しかし、OIDをX.509証明書をDER形式で読み書きするときは、ドット表記ではなくバイト列による表記を使います。
+例えばOID「1.2.3.4.16」をバイト列に変換すると16進数表記で「01 02 03 04 10」になります。とても簡単です。
+ただし、変換の表記にあたって次の2つの特殊ルールが優先して適用されます。
 
 1. 先頭から1つ目の数字Xと2つ目の数字Yについては、まとめて1バイトで表記され、その値は X * 40 + Y を16進数表記にしたものです。
-  例えば先頭が「1.2.」のときは、40*1 + 2 = 42 = 0x2A となります。
-2. 7bit以上の数字 (128以上) は7bit毎に分けて複数のバイトで表記されます。
+  例えば先頭が「1.2.」のときは、40*1 + 2 = 42 = 0x2A となり、16進数表記で「2A」となります。
+2. 7bit以上の数字 (10進数で128以上の数字) は7bit毎に分けて複数のバイトで表記されます。
    それぞれのバイトの最上位ビットが1のときは継続を、0のときは終端を表します。
-   例えば 840 のとき、840 = 0b1101001000 となり、7bit以上なので分割すると「110」と「1001000」になります。1つ目は継続、2つ目は終端になるので、1つ目の最上位ビットを1にし、2つ目の最上位ビットを0にすると、「10000110」と「01001000」となり、16進数表記にすると「0x86 0x48」となります。
+   例えば 840 のとき、840 = 0b1101001000 となり、7bit以上なので分割すると「110」と「1001000」になります。1つ目は継続、2つ目は終端になるので、1つ目の最上位ビットを1にし、2つ目の最上位ビットを0にすると、「10000110」と「01001000」となり、16進数表記で「86 48」となります。
+
+この特殊ルールを適用した上で、OID「1.2.3.4.16」をバイト列に変換すると16進数表記で「2A 03 04 10」になります。
 
 以上のルールをPythonに書くと以下のようになります。
 
@@ -70,11 +73,11 @@ byte2str_OID(b'\x2A\x86\x48\x86\xF7\x0D\x02\x05')
 str2byte_OID('1.2.840.113549.2.5').hex()
 ```
 
-実際にASN.1で使用する場合は、Tag-Length-Valueの形式で表され、
-OIDの場合は、Tag が 0x06 となり、上記の例をASN.1で表すと「06 08 2A 86 48 86 F7 0D 02 05」のように先頭の2バイトが新たに追加されることに注意が必要です。
+実際にASN.1で使用する場合は、Tag-Length-Valueの形式で表されます。
+OIDの場合は、Tag が 0x06 となり、上記の例（長さが8のデータ）をASN.1で表すと「**06 08** 2A 86 48 86 F7 0D 02 05」のように先頭の2バイトが新たに追加されることに注意が必要です。
 
 
-以下ではよく使う（と思われる）OIDとそのバイト列の一覧です。
+以下はよく使う（と思われる）OIDとそのバイト列の一覧です。
 
 
 ### ハッシュアルゴリズム
@@ -175,13 +178,13 @@ OIDの場合は、Tag が 0x06 となり、上記の例をASN.1で表すと「06
 
 ### OIDの割り当て規則
 
-OIDを構成する10進数のうち、最初の2つについては、次のように割り当て規則があります。
+ドット表記のOID「X.Y.〜」のうち、最初の2つについては、次のように割り当て規則があります。
 
-| 1つ目 | 2つ目
+| X (1番目の値) | Y (2番目の値)
 |---+---
 | `0`: ITU-T が規定 | `0`: 勧告(recommendation)<br>`1`: 課題(question)<br>`2`: 管理組織(administration)<br>`3`: ネットワークオペレータ
 | `1`: ISO が規定 | `0`: 標準 (standard)<br>`1`: 登録機関 (registration-authority)<br>`2`: 加盟団体 (member-body)<br>`3`: 身元が明らかな組織 (identified-organization)
-| `2`: ITU-T と ISO が規定
+| `2`: ITU-T と ISO が規定 | -
 
 例えば、OID の先頭が 1.2 のオブジェクトは、ISO の加盟団体によって管理されていることになります。
 
