update post, powershell/which

--- a/_posts/powershell/2021-01-23-which.md
+++ b/_posts/powershell/2021-01-23-which.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "PowerShellでwhichコマンドを作る"
+title:         "PowerShellでLinuxのwhichコマンドを作る"
 date:          2021-01-23
 category:      PowerShell
 cover:         /assets/cover1.jpg
@@ -16,7 +16,9 @@ photoswipe:    false
 zshのwhichコマンドは、コマンドの場所や関数・エイリアスの定義を調べることができます。
 zshのwhichのように、PowerShellにはGet-Commandがありますが、これをwhichで呼び出せるようにして、PowerShellでwhichコマンドが実行できるようにします。
 
-結論から言うと、以下のコードを profile に書いてあげることで、起動時に which が使えるようになります。
+結論から言うと、以下のコードを profile ファイルに書いてあげることで、起動時に which が使えるようになります。
+なお、profile ファイルの場所は次のパスです。
+%USERPROFILE%\Documents\WindowsPowerShell\Microsoft.PowerShell_profile.ps1
 
 ```powershell
 function which($cmdname) {
