suppress warnings from markdown-link-checker

--- a/_posts/misc/2019-08-18-seccamp2019.md
+++ b/_posts/misc/2019-08-18-seccamp2019.md
@@ -132,7 +132,7 @@ Tonelli–Shanks algorithmを実装しようと思ったけど、答えが合わ
 - 実質無限、高々有限
 - [2020年 暗号と情報セキュリティシンポジウム](https://www.iwsec.org/scis/2020/index.html) の実行委員に木藤圭亮さん（リバースエンジニアリングゼミの講師）がいる!
 - 暗号利用モードOCBから派生したOCB2には脆弱性が存在する
-- AES-GCM のpdf「[The Galois/Counter Mode of Operation (GCM)](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.694.695&rep=rep1&type=pdf)」
+- AES-GCM のpdf「[The Galois/Counter Mode of Operation (GCM)](https://csrc.nist.rip/groups/ST/toolkit/BCM/documents/proposedmodes/gcm/gcm-spec.pdf)」
 - AES-GCM でNonceが使い回されていると、差分解読法 (選択平文攻撃) で Auth Data が導出できる
 - 楕円曲線のグラフを描きたいときは [GeoGebra](https://www.geogebra.org/)
 
