--- a/_posts/elixir/2017-01-09-nlp100-10-19.md
+++ b/_posts/elixir/2017-01-09-nlp100-10-19.md
@@ -18,15 +18,17 @@ published:     true
 東北大学の乾・岡崎研究室 Web ページにて公開されている言語処理100本ノックを
 **Elixir** で挑戦していきます。
 
-# 第2章: UNIXコマンドの基礎
+## 第2章: UNIXコマンドの基礎
 
+<!-- markdown-link-check-disable -->
 > [hightemp.txt](http://www.cl.ecei.tohoku.ac.jp/nlp100/data/hightemp.txt)
 は，日本の最高気温の記録を「都道府県」「地点」「℃」「日」のタブ区切り形式で格納したファイルである．
 以下の処理を行うプログラムを作成し，
 [hightemp.txt](http://www.cl.ecei.tohoku.ac.jp/nlp100/data/hightemp.txt)
 を入力ファイルとして実行せよ．さらに，同様の処理を UNIX コマンドでも実行し，プログラムの実行結果を確認せよ．
+<!-- markdown-link-check-enable-->
 
-## 10. 行数のカウント
+### 10. 行数のカウント
 
 > 行数をカウントせよ．確認には wc コマンドを用いよ．
 
@@ -39,7 +41,7 @@ File.stream!(filepath)
 |> IO.inspect
 ```
 
-## 11. タブをスペースに置換
+### 11. タブをスペースに置換
 
 > タブ 1 文字につきスペース 1 文字に置換せよ．確認には sed コマンド， tr コマンド，もしくは expand コマンドを用いよ．
 
@@ -51,7 +53,7 @@ File.read!(filepath)
 |> IO.inspect
 ```
 
-## 12. 1列目をcol1.txtに，2列目をcol2.txtに保存
+### 12. 1列目をcol1.txtに，2列目をcol2.txtに保存
 
 > 各行の 1 列目だけを抜き出したものを col1.txt に，2列目だけを抜き出したものを col2.txt としてファイルに保存せよ．
 確認には cut コマンドを用いよ．
@@ -71,7 +73,7 @@ File.stream!(filepath)
   end)
 ```
 
-## 13. col1.txtとcol2.txtをマージ
+### 13. col1.txtとcol2.txtをマージ
 
 > 12 で作った col1.txt と col2.txt を結合し，元のファイルの 1 列目と 2 列目を
 タブ区切りで並べたテキストファイルを作成せよ．確認には paste コマンドを用いよ．
@@ -89,7 +91,7 @@ content = Stream.zip(col1, col2)
 File.write!("merge.txt", content, [:write])
 ```
 
-## 14. 先頭からN行を出力
+### 14. 先頭からN行を出力
 
 > 自然数 N をコマンドライン引数などの手段で受け取り，入力のうち先頭の N 行だけを表示せよ．
 確認には head コマンドを用いよ．
@@ -103,7 +105,7 @@ File.stream!(filepath)
 |> IO.inspect
 ```
 
-## 15. 末尾のN行を出力
+### 15. 末尾のN行を出力
 
 > 自然数 N をコマンドライン引数などの手段で受け取り，入力のうち末尾の N 行だけを表示せよ．
 確認には tail コマンドを用いよ．
@@ -117,7 +119,7 @@ File.stream!(filepath)
 |> IO.inspect
 ```
 
-## 16. ファイルをN分割する
+### 16. ファイルをN分割する
 
 > 自然数 N をコマンドライン引数などの手段で受け取り，入力のファイルを行単位で N 分割せよ．
 同様の処理を split コマンドで実現せよ．
@@ -136,7 +138,7 @@ max_row = div(length(content), file_n)
   end)
 ```
 
-## 17. １列目の文字列の異なり
+### 17. １列目の文字列の異なり
 
 > 1 列目の文字列の種類（異なる文字列の集合）を求めよ．確認には sort ,  uniq コマンドを用いよ．
 
@@ -153,7 +155,7 @@ File.stream!(filepath)
 ```
 
 
-## 18. 各行を3コラム目の数値の降順にソート
+### 18. 各行を3コラム目の数値の降順にソート
 
 > 各行を 3 コラム目の数値の逆順で整列せよ（注意: 各行の内容は変更せずに並び替えよ）．
 確認には sort コマンドを用いよ（この問題はコマンドで実行した時の結果と合わなくてもよい）．
@@ -178,7 +180,7 @@ File.stream!(filepath)
 ```
 
 
-## 19. 各行の1コラム目の文字列の出現頻度を求め，出現頻度の高い順に並べる
+### 19. 各行の1コラム目の文字列の出現頻度を求め，出現頻度の高い順に並べる
 
 > 各行の 1 列目の文字列の出現頻度を求め，その高い順に並べて表示せよ．
 確認には cut ,  uniq ,  sort コマンドを用いよ．
@@ -198,4 +200,4 @@ File.stream!(filepath)
 
 ----
 
-第3章につづく
+第3章につづく (後日追記：続きません)
