update post title

--- a/_posts/linux/2022-10-30-nsswitch.md
+++ b/_posts/linux/2022-10-30-nsswitch.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "pingは失敗するがdigの名前解決は問題ない場合の対処法 (nsswitch.conf)"
+title:         "pingは失敗するがdigの名前解決はできる場合の対処法 (nsswitch.conf)"
 date:          2022-10-30
 category:      Linux
 cover:         /assets/cover14.jpg
