new post misc/seccamp2022

--- a/_posts/misc/2020-12-12-seccamp2020.md
+++ b/_posts/misc/2020-12-12-seccamp2020.md
@@ -3,19 +3,18 @@ layout:        post
 title:         "seccamp2020チュータ参加記"
 date:          2020-12-12
 category:      Misc
-cover:         /assets/cover1.jpg
+cover:         /assets/cover14.jpg
 redirect_from:
 comments:      true
 published:     true
 latex:         false
 photoswipe:    false
-# sitemap: false
-# feed:    false
 similarPosts:
-- [../misc/seccamp2018, seccamp2018全国大会に参加]
-- [../misc/seccamp2019, seccamp2019チュータ参加記, ««« 前回]
-- [../misc/seccamp2020, seccamp2020チュータ参加記, ««« 今回]
-- [../misc/seccamp2021, seccamp2021チュータ参加記, ««« 次回]
+- [../misc/seccamp2018, seccamp2018全国大会参加記]
+- [../misc/seccamp2019, seccamp2019チュータ参加記]
+- [../misc/seccamp2020, seccamp2020チュータ参加記]
+- [../misc/seccamp2021, seccamp2021チュータ参加記]
+- [../misc/seccamp2022, seccamp2022講師参加記]
 ---
 
 セキュリティ・キャンプ全国大会2020オンラインにチュータとして参加し、仕事と両立しながらの参加だったので、その参加記を書いていこうと思います。
