--- a/_posts/misc/2018-08-19-seccamp2018.md
+++ b/_posts/misc/2018-08-19-seccamp2018.md
@@ -1,19 +1,20 @@
 ---
 layout:        post
-title:         "seccamp2018全国大会に参加"
-menutitle:     "seccamp2018全国大会に参加しました"
+title:         "seccamp2018全国大会参加記"
+menutitle:     "seccamp2018全国大会参加記"
 date:          2018-08-19
 category:      Misc
 author:        tex2e
-cover:         /assets/cover1.jpg
+cover:         /assets/cover14.jpg
 redirect_from:
 comments:      true
 published:     true
 similarPosts:
-- [../misc/seccamp2018, seccamp2018全国大会に参加, ««« 今回]
-- [../misc/seccamp2019, seccamp2019チュータ参加記, ««« 次回]
+- [../misc/seccamp2018, seccamp2018全国大会参加記]
+- [../misc/seccamp2019, seccamp2019チュータ参加記]
 - [../misc/seccamp2020, seccamp2020チュータ参加記]
 - [../misc/seccamp2021, seccamp2021チュータ参加記]
+- [../misc/seccamp2022, seccamp2022講師参加記]
 ---
 
 セキュリティキャンプ2018全国大会の集中開発コースで TLS 1.3 を実装したのでその話と、私の記憶がある限りの全ての出来事をここに書いていこうと思います。
