--- a/_posts/misc/2019-08-18-seccamp2019.md
+++ b/_posts/misc/2019-08-18-seccamp2019.md
@@ -4,16 +4,17 @@ title:         "seccamp2019チュータ参加記"
 date:          2019-08-18
 category:      Misc
 author:        tex2e
-cover:         /assets/cover1.jpg
+cover:         /assets/cover14.jpg
 redirect_from:
 comments:      true
 published:     true
 latex:         true
 similarPosts:
-- [../misc/seccamp2018, seccamp2018全国大会に参加, ««« 前回]
-- [../misc/seccamp2019, seccamp2019チュータ参加記, ««« 今回]
-- [../misc/seccamp2020, seccamp2020チュータ参加記, ««« 次回]
+- [../misc/seccamp2018, seccamp2018全国大会参加記]
+- [../misc/seccamp2019, seccamp2019チュータ参加記]
+- [../misc/seccamp2020, seccamp2020チュータ参加記]
 - [../misc/seccamp2021, seccamp2021チュータ参加記]
+- [../misc/seccamp2022, seccamp2022講師参加記]
 ---
 
 セキュリティ・キャンプ全国大会2019では初めてチュータとして参加させて頂いたので、チュータ業務はどんな感じなのかという話と、私の記憶がある限りの全ての出来事をここに書いていこうと思います。
