--- a/_posts/misc/2022-12-23-seccamp2022.md
+++ b/_posts/misc/2022-12-23-seccamp2022.md
@@ -34,7 +34,7 @@ similarPosts:
 参加者が提出したやりたいことをベースに、それを自分の得意なプロトコルの分野に発展させるとなると、とても難しく感じました。
 現在の標準プロトコルに組み込んだり、アルゴリズムとしてなぜそのような構成になっているのかを探求できれば、そこに面白さがあるかもと思っていましたが、そこに導くまでの道筋が上手に自分の中で描けなかった部分があります。
 
-講義の流れとしては対話を通じて暗号プリミティブに対する攻撃手法などの論文などを参考に紹介し、その攻撃を理解するための数学的な知識を身につける側面と、攻撃対象のアルゴリズムを理解する側面から理解を進める感じです。
+講義の流れとしては対話を通じて暗号プリミティブに対する攻撃手法などの論文などを参考に紹介し、その攻撃を理解するための数学的な知識を身につける側面と、攻撃や攻撃対象のアルゴリズムを実装して学ぶ側面から理解を進める感じです。
 
 自分が手伝える部分としてはAESやRSAなどの暗号プリミティブの実装とかになるので、実装のサポートとかテストベクタの紹介とかをやっていました。
 sagemath で書かれている攻撃コードを python で再実装する、いわゆる車輪の再発明に近いことをやってもらいました。
