--- a/_posts/misc/2022-12-23-seccamp2022.md
+++ b/_posts/misc/2022-12-23-seccamp2022.md
@@ -48,11 +48,12 @@ sagemath で書かれている攻撃コードを python で再実装する、い
   応募課題の設定から関わらないと難しい部分ではあったかもしれませんが、会話の中で論文のURLを貼るのと同じ要領で、構成法や標準プロトコルで関連するRFCとかのURLを貼ればよかったと思っています。
 - RFCとかDraft版とかや、他の人の実装とかを読みながら、技術を理解するコースとかできれば面白そうとは常々思っています。
   自分が参加者としてやったTLS 1.3のRFC読みとか。今ならQUICとかになるのかな。
+  TLS関連だとQualys社のSSL Server TestでサーバのTLS設定をチェックするツール実装とかもできそう。
   TLSまで作れると、上位に好きなプロトコル乗せられるので、SSL-VPNとかもできるかも。
   IPsecでL2TPの通信をしてVPNする方法とかできるとネットワークの知識が付きそう。
   機密性の観点以外にも、暗号には真正性（認証）の観点もあるので、OAuth、OpenIDとかの認証プロトコルを実装していく道筋もありそう。
   二要素認証として使われるTOTP（時間ベースのワンタイムパスワード）とかもRFCになっているので、その実装をしてみるとかもあり。
-  PKI方面では、証明書を解析して失効していないかとかOCSPも見つつ判断するツールの実装をやってみると、証明書に対する理解が深まりそう。
+  PKI方面では、証明書のバイナリから解析して失効していないかとかOCSPも見つつ判断するツールの実装をやってみると、証明書に対する理解が深まりそう。
   上記も含めて、次回(があれば)応募課題の設定を考えたい。
 
 ### 次回に向けて
