--- a/_posts/misc/2020-12-12-seccamp2020.md
+++ b/_posts/misc/2020-12-12-seccamp2020.md
@@ -130,7 +130,9 @@ L1の暗号解読チャレンジゼミは暗号の解読方法を実装するの
 
 #### 参考文献
 <!-- markdown-link-check-disable -->
-- [セキュリティ・キャンプ全国大会2020 オンライン　ホーム：IPA 独立行政法人 情報処理推進機構](https://www.ipa.go.jp/jinzai/camp/2020/zenkoku2020_index.html)
+- IPA
+    - [セキュリティ・キャンプ全国大会2020 オンライン　ホーム：IPA 独立行政法人 情報処理推進機構](https://warp.ndl.go.jp/info:ndljp/pid/12446699/www.ipa.go.jp/jinzai/camp/2020/zenkoku2020_index.html)
+    - [Lトラック 課題](https://warp.ndl.go.jp/info:ndljp/pid/12446699/www.ipa.go.jp/files/000084569.txt)
 <!-- markdown-link-check-enable-->
 - その他：
-  - [セキュリティキャンプ Advent Calendar 2020 - Adventar](https://adventar.org/calendars/5325)
+    - [セキュリティキャンプ Advent Calendar 2020 - Adventar](https://adventar.org/calendars/5325)
