--- a/_posts/misc/2021-10-03-seccamp2021.md
+++ b/_posts/misc/2021-10-03-seccamp2021.md
@@ -142,10 +142,14 @@ Poodle Attack で復号の成功失敗を判定する際に TLSPlaintext の Con
 最後に「Docendo discimus（教えることによって私たちは学ぶ）」という言葉でこの参加記を締めたいと思います。
 
 #### 参考文献
-- [POODLE Attackの講義資料](https://gist.github.com/kurenaif/30cd917737d7f45e165146c82861ff91#file-poodle_lesson-md)
 <!-- markdown-link-check-disable -->
-- [セキュリティ・キャンプ全国大会2021 オンライン　ホーム：IPA 独立行政法人 情報処理推進機構](https://www.ipa.go.jp/jinzai/camp/2021/zenkoku2021_index.html)
+- IPA
+    - [セキュリティ・キャンプ全国大会2021 オンライン　ホーム：IPA 独立行政法人 情報処理推進機構](https://warp.ndl.go.jp/info:ndljp/pid/12446699/www.ipa.go.jp/jinzai/camp/2021/zenkoku2021_index.html)
+    - [Lトラック 課題](https://warp.ndl.go.jp/info:ndljp/pid/12446699/www.ipa.go.jp/files/000090352.txt)
 <!-- markdown-link-check-enable-->
+
+- 講義資料
+    - [POODLE Attackの講義資料](https://gist.github.com/kurenaif/30cd917737d7f45e165146c82861ff91#file-poodle_lesson-md)
 
 - その他：
     - [SSLv3 and POODLE](https://www.slideshare.net/exploresecurity/ss-lv3-and-poodle)
