--- a/_posts/misc/2022-12-23-seccamp2022.md
+++ b/_posts/misc/2022-12-23-seccamp2022.md
@@ -69,4 +69,6 @@ sagemath で書かれている攻撃コードを python で再実装する、い
 
 
 ### 参考資料
-- [セキュリティ・キャンプ全国大会2022 オンライン　プログラム／タイムテーブル：IPA 独立行政法人 情報処理推進機構](https://www.ipa.go.jp/jinzai/camp/2022/zenkoku2022_program_timetable.html)
+- IPA
+    - [セキュリティ・キャンプ全国大会2022 オンライン　ホーム：IPA 独立行政法人 情報処理推進機構](https://warp.ndl.go.jp/info:ndljp/pid/12446699/www.ipa.go.jp/jinzai/camp/2022/zenkoku2022_index.html)
+    - [L1 課題](https://warp.ndl.go.jp/info:ndljp/pid/12446699/www.ipa.go.jp/files/000097402.txt)
