--- a/_posts/powershell/2022-04-05-array.md
+++ b/_posts/powershell/2022-04-05-array.md
@@ -17,7 +17,7 @@ PowerShellで配列を定義するには、配列キャスト構文 `@()` を使
 しかし、実際はこの構文を使用しなくても配列を作ることは可能です。
 また、連想配列を定義するには `@{}` を使用します。
 
-## 配列
+## 1. 配列
 配列の定義は `@()` を使用します。
 
 #### 配列の定義
@@ -81,12 +81,11 @@ PS> $myArray[1..3]
 #### 配列への要素の追加
 配列への要素の追加は `+=` を使います。
 ```ps1
-PS> $myArray = @(1,2,3)
+PS> $myArray = @(1,2)
 PS> $myArray += 4
 PS> $myArray
 1
 2
-3
 4 
 ```
 
@@ -109,18 +108,13 @@ PS> $myArray[0..2+4,5]
 
 特殊な例として、配列スライス構文を使って配列を作ることも可能です。
 ```ps1
-PS> $sample = 0,2 + 4..6 + 8..10 + 12,14
+PS> $sample = 0,2 + 4..6
 PS> $sample
 0
 2
 4
 5
 6
-8
-9
-10
-12
-14
 ```
 
 #### 並列代入 (複数の変数への同時代入)
@@ -148,7 +142,9 @@ Banana
 Cherry
 ```
 
-## 連想配列
+<br>
+
+## 2. 連想配列
 連想配列の定義は `@{}` を使用します。
 
 #### 連想配列の定義
