update post title

--- a/_posts/infra/2023-06-03-router-rtx1000.md
+++ b/_posts/infra/2023-06-03-router-rtx1000.md
@@ -1,6 +1,6 @@
 ---
 layout:        post
-title:         "RTX1000による2セグメント間の通信"
+title:         "RTX1000ルータによる2セグメント間の通信"
 date:          2023-06-03
 category:      Infrastructure
 cover:         /assets/cover14.jpg
