--- a/_posts/misc/2023-07-07-nudge.md
+++ b/_posts/misc/2023-07-07-nudge.md
@@ -39,7 +39,7 @@ photoswipe:    false
     - 他の人がどのように行動しているかの情報を提供するナッジ。私たちの「他人に影響されるという特徴」を利用
     - 例：入力したパスワードが他の人のXX%よりも弱いパスワードであることを表示する
 
-ナッジは意思決定をするその瞬間には効きますが、長期的な効果はありません。持続させるためには教育が必要です（利用することのメリットを理解するなど）。
+ナッジは意思決定をするその瞬間には効きますが、長期的な効果はありません。持続させるためには教育が必要です（利用することのメリットを理解させるなど）。
 - 例：マイナンバーカードを普及させるために、マイナンバーカードを使うことでスラッジが減る（行政手続きの手間が減る）、ということをリテラシーとして教育する
 
 ### Sludge (スラッジ)
@@ -56,7 +56,7 @@ photoswipe:    false
     - 確認画面を表示すると手順が煩雑になるが、効果的なときもある
     - 例：拳銃購入前に待機時間を設ける（アメリカの法律）
     - 例：中絶をするまでに時間を設けてカウンセリングを必須とする
-- ナッジをするよりもスラッジを減らす方が効果がある場合もある
+- ナッジをするよりもスラッジを減らす方が効果的なときもある
     - 「面倒だからやらない」が、良い行動を阻害している可能性あり
     - 気づかれないナッジは良くない（効果的ではない）。誘導されたことを認識した上で同意する（気づくナッジ）の方が効果的
 
