update dead links

--- a/_posts/crypto/2019-05-17-chacha20poly1305.md
+++ b/_posts/crypto/2019-05-17-chacha20poly1305.md
@@ -13,10 +13,9 @@ photoswipe:    true
 ---
 
 ChaCha20-Poly1305というAEAD暗号について、内部のアルゴリズムやPythonによる実装などを説明していきたいと思います。
-この記事を作るに当たって、
-[@jovi0608](https://twitter.com/jovi0608) さんの記事
+この記事を作るに当たって、@jovi0608 さんの記事
 [新しいTLSの暗号方式ChaCha20-Poly1305 - ぼちぼち日記](https://jovi0608.hatenablog.com/entry/20160404/1459748671)
-や、セキュリティ・キャンプ全国大会2018の「TLS 1.3/暗号ゼミ」の同じ参加者の [@ykm_kn](https://twitter.com/ykm_kn) さんの記事
+や、セキュリティ・キャンプ全国大会2018の「TLS 1.3/暗号ゼミ」の同じ参加者の @ykm_kn さんの記事
 [ChaCha20-Poly1305の解説と実装 - ぺんぎんさんのおうち](https://ykm11.hatenablog.com/entry/seccamp-AC2018-2)
 を参考にしつつ、自分でもPythonで実装して理解したことを書いていきたいと思います。
 
