new post, seccamp2023

--- a/_posts/misc/2020-12-12-seccamp2020.md
+++ b/_posts/misc/2020-12-12-seccamp2020.md
@@ -15,6 +15,7 @@ similarPosts:
 - [../misc/seccamp2020, seccamp2020チュータ参加記]
 - [../misc/seccamp2021, seccamp2021チュータ参加記]
 - [../misc/seccamp2022, seccamp2022講師参加記]
+- [../misc/seccamp2023, seccamp2023講師参加記]
 ---
 
 セキュリティ・キャンプ全国大会2020オンラインにチュータとして参加し、仕事と両立しながらの参加だったので、その参加記を書いていこうと思います。
