--- a/_posts/misc/2018-08-19-seccamp2018.md
+++ b/_posts/misc/2018-08-19-seccamp2018.md
@@ -15,6 +15,7 @@ similarPosts:
 - [../misc/seccamp2020, seccamp2020チュータ参加記]
 - [../misc/seccamp2021, seccamp2021チュータ参加記]
 - [../misc/seccamp2022, seccamp2022講師参加記]
+- [../misc/seccamp2023, seccamp2023講師参加記]
 ---
 
 セキュリティキャンプ2018全国大会の集中開発コースで TLS 1.3 を実装したのでその話と、私の記憶がある限りの全ての出来事をここに書いていこうと思います。
