--- a/_posts/misc/2023-08-11-seccamp2023.md
+++ b/_posts/misc/2023-08-11-seccamp2023.md
@@ -83,7 +83,7 @@ L1暗号化通信ゼミのプロトコルコースの応募課題としては、
 
 2日目あたりで、朝の8:30になってL1受講生は揃っているのに、緑川先生とチュータが遅刻するというハプニングがありました。
 講師が揃っていないところで、プリミティブ側でSIDHに対する攻撃の実装ができたーとの声が聞こえたので、とても良い機会なのでプリミティブ側がどんなことをやっているか教えてもらおうと思い、今回扱っている Castryck-Decru attack (2022/7) とはどういった攻撃なのかとか、そもそもSIDHとはどんな鍵交換アルゴリズムなのかを質問したりして教えてもらっていました。
-数学の面の色々基本的な部分で勉強になることが多かったです。
+数学に強いチューターさんも議論に参加してくれたおかげで、数学の面の色々基本的な部分で勉強になることが多かったです。
 
 教育というと講師から学習者への一方的な情報伝達になりがちですが、セキュリティキャンプは合宿形式で相互作用における学習では教え合うことで、知識を掘り下げたり関連づけたりして構築されていくため、プロトコル・プリミティブの両方の視点からどう見えるか、という観点で面白くなる余地がありそうだなと感じました。
 次回はテーマにもよりますが、実装したプロトコルの上に新しい暗号化手法を追加するなどのプロトコル・プリミティブの相互作用ができれば楽しいだろうな、と思っています。
