--- a/_posts/misc/2023-08-11-seccamp2023.md
+++ b/_posts/misc/2023-08-11-seccamp2023.md
@@ -93,7 +93,7 @@ L1暗号化通信ゼミのプロトコルコースの応募課題としては、
 バグとり（玄関用の虫除け）の効果もあり、デバッグなどの作業も捗り、開発は順調に進めることができました。
 プロトコル側は無事に最低限の機能がある状態で最終発表資料作成に臨めたので一安心でした。
 
-最終発表では、ざっくりいうと「UDP over HTTPS」でTLSトンネリングを実装して、WireGaurdの通信がDNS/HTTP/HTTPSだけが許可されているFWの制限を通るような仕組みを作成した、というところです。
+最終発表では、ざっくりいうと「UDP over HTTPS」でTLSトンネリングを実装して、VPNのWireGuardの通信がDNS/HTTP/HTTPSだけが許可されているFWの制限を通るような仕組みを作成した、というところです。
 難しいことをみんなにわかりやすく伝えるのもスキルの一つなので、Lトラック内の発表と最終発表を通して得られるものがあればいいなと思っています。
 
 ### キャンプを終えて
